--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "encore/laravel-admin": "^1.8",
+        "goodby/csv": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
         "kyslik/column-sortable": "^7.0",
         "laravel/framework": "^9.19",
